--- a/templates/contact.html
+++ b/templates/contact.html
@@ -82,7 +82,7 @@
                                     </div>
                                     
                                     <div class="mb-3">
-                                        <label for="phone" class="form-label">Phone Number</label>
+                                        <label for="phone" class="form-label">WhatsApp Number</label>
                                         <input type="tel" class="form-control" id="phone" name="phone">
                                     </div>
                                     
